Fixing mobile when click to input and when resize | 5:10 AM 15/8/2022 | by Phat

--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -368,7 +368,8 @@ html, body{
     display: inline-flex;
     flex-direction: column;
     gap: 3vh;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: visible ;
 }
 .history-model {
     display: flex;
