--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -12,36 +12,31 @@
 
 }
 
-
 html, body{
     width: auto;
     height: auto;
     /*  */
 }
+::-moz-scoll
 /* width */
 ::-webkit-scrollbar {
     width: 7px;
-
 }
-
 /* Track */
 ::-webkit-scrollbar-track {
   background: #fff;
-
   border-radius: 10px;
 }
  
 /* Handle */
 ::-webkit-scrollbar-thumb {
     background: rgb(241, 241, 241); 
-  border-radius: 10px;
+    border-radius: 10px;
 }
 
 /* Handle on hover */
 ::-webkit-scrollbar-thumb:hover {
   background: rgb(218, 218, 218); 
-
-
 }
 #header{
     background: #f75959;
