--- a/assets/css/home.css
+++ b/assets/css/home.css
@@ -17,7 +17,10 @@ html, body{
     height: auto;
     /*  */
 }
-::-moz-scoll
+:root{
+    scrollbar-color: rgb(241, 241, 241) #fff;
+    scrollbar-width: thin;
+}
 /* width */
 ::-webkit-scrollbar {
     width: 7px;
